[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Linsh"
version = "20220820"
authors = [
  { name="Darkhound-org" },
]
description = "Fed up of long links ??? Use  Linsh , a CLI tool to shorten links right from your terminal."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License :: 2.0",
    "Operating System :: OS Independent",
]
dependencies = [
      "anyio==3.6.1",
      "bitly-api-py3==0.3",
      "certifi==2022.6.15",
      "charset-normalizer==2.1.0",
      "click==8.1.3",
      "colorama==0.4.5",
      "commonmark==0.9.1",
      "h11==0.13.0",
      "idna==3.3",
      "pydantic==1.9.2",
      "Pygments==2.12.0",
      "pyshorteners==1.0.1",
      "quo==2022.6.1",
      "requests==2.28.1",
      "rich==12.5.1",
      "sniffio==1.2.0",
      "starlette==0.19.1",
      "typing_extensions==4.3.0",
      "urllib3==1.26.11",
      "uvicorn==0.18.2",

]

[project.urls]
"Homepage" = "https://github.com/Darkhound-org/Linsh"
"Bug Tracker" = "https://github.com/Darkhound-org/Linsh/issues"
